# HealthNutrition-Backend

./: .dockerignore  .env.dist  .pre-commit-config.yaml  README.md  conftest.py  manage.py  pyproject.toml  pytest.ini
.github/workflows/: app_tests.yaml  ci.yaml  health_check.yaml  linters.yaml  testing.yaml  testing.yml  tests.yaml  workflow.yaml
api/: conftest.py  decorators.py  permissions.py  responses.py  urls.py
api/base/: converters.py  services.py  time_providers.py
api/common/: adapters.py  constants.py  djoser.py  filters.py  mail.py  models.py  permissions.py  services.py  tasks.py  tests.py  time_providers.py
api/utils/: cache.py  code_generation.py  codes.py  errors.py  files.py  mail.py  models.py  network.py  tests.py  text.py  time.py
api/v1/: apps.py  conftest.py  schema_urls.py  urls.py
baskets/: apps.py  models.py
comments/: admin.py
common/: context_processors.py  decorators.py  mixins.py  models.py  signals.py  tests.py  views.py
common/tests/: test_models.py
comparisons/: admin.py  apps.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
comparisons/tests/: conftest.py  test_views.py  (+1 more)
core/: api_schema.py  celery.py  settings.py  urls.py  yasg.py
docker/: Dockerfile  celery_entrypoint.sh
interactions/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
products/: admin.py  apps.py  filters.py  forms.py  managers.py  mixins.py  models.py  serializers.py  signals.py  urls.py  views.py
requirements/: base.txt  local.txt  production.txt
stores/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
users/: admin.py  apps.py  forms.py  mixins.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
utils/: cache.py  mail.py  static.py  tests.py  urls.py  validators.py
(+258 files in other folders)
